Version 0.4.6 (unreleased)
--------------------------
* Fixes an UnicodeDecodeError which was apparently only triggered during testing on TravisCI (I hope)
* Support for Django 2.0 urlpatterns syntax (PR #82, Thanks @R3v1L)

Version 0.4.5
-------------
* Test with tox
* Test against Django 1.8 final
* Added ability to force a fixed image size (PR #76, Thanks @superqwer)

Version 0.4.4
-------------
* Added id_prefix argument (fixes issue #37)

Version 0.4.3
-------------
* Add null noise helper (Thanks @xrmx)
* Test against Django 1.7b4
* Added Spanish translations (Thanks @dragosdobrota)
* Massive cleanup (pep8, translations)
* Support for transparent background color. (Thanks @curaloucura)
* Support both Django 1.7 migrations and South migrations.
  Please note, you *must* add the following to your settings, if you are
  using South migrations and Django 1.6 or lower.
* Make sure autocomplete="off" is only applied to the text input, not the hidden input (Issue #68, thanks @narrowfail)
* Fixed some grammar in the documentation. (Thanks @rikrian)
* Return an HTTP 410 GONE error code for expired captcha images, to avoid crawlers from trying to reindex them (PR #70, thanks @joshuajonah)
* Fixed title markup in documentation (#74, thanks @pavlov99)
* Test against Django 1.7.1

Version 0.4.2
-------------
* Added autocomplete="off" to the input (Issue #57, thanks @Vincent-Vega)
* Fixed the format (msgfmt -c) of most PO and MO files distributed with the project
* Added Bulgarian translations. (Thanks @vstoykov)
* Added Japanese translations. (Thanks, Keisuke URAGO)
* Added Ukrainian translations. (Thanks, @FuriousCoder)
* Added support for Python 3.2. (Thanks, @amrhassan)

Version 0.4.1
-------------
* Dropped support for Django 1.3
* Fixed support of newer versions of Pillow (2.1 and above. Pillow 2.2.2 is now required) Thanks @viaregio (Issue #50)

Version 0.4.0
-------------