@@ -17,11 +17,11 @@ setenv =
         PYTHONDONTWRITEBYTECODE=1
 
 deps =
-        django14: Django==1.4.20
+        django14: Django==1.4.21
         django15: Django==1.5.12
         django16: Django==1.6.11
-        django17: Django==1.7.7
-        django18: Django==1.8
+        django17: Django==1.7.9
+        django18: Django==1.8.2
 
         {py26,py27}-django{14,15,16,17,18}: python-memcached
         py34-django{14,15,16,17,18}: python3-memcached
